--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,14 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:gravity="fill_vertical" >
 
-    <TextView
+    <Button
+        android:id="@+id/viewPagerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
-        tools:context=".MainActivity" />
-
+        android:layout_marginTop="117dp"
+        android:text="view pager" />
+    
 </RelativeLayout>
