--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,9 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppTheme" parent="android:Theme.Light" />
+
+    <style name="customAppTheme" parent="android:Theme.Light">
+        <item name="android:windowTitleSize">40dp</item>
+    </style>
 
 </resources>
