--- a/res/layout/timeline_listview_container.xml
+++ b/res/layout/timeline_listview_container.xml
@@ -4,12 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-
+    
     <ListView android:id="@+id/ListContainer"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:drawSelectorOnTop="false"
         android:layout_marginBottom="60dip"
         android:cacheColorHint="#11111111" />
-    
+<!-- 
+  <TextView android:id="@+id/txtHeader"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center_vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:textStyle="bold"
+        android:textSize="22dp"
+        android:textColor="#FFFFFF"
+        android:padding="10dp"
+        android:text="Weather Photos"
+        android:background="#336699" />
+-->
+     
 </RelativeLayout>
