--- a/res/layout/timeline_listview_content.xml
+++ b/res/layout/timeline_listview_content.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/lineItem"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:gravity="center_vertical">
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" 
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:padding="10dp">
     
-    <ImageView  android:id="@+id/picLine"
-        android:layout_alignParentLeft="false"
-        android:layout_width="48dip"
-        android:layout_height="48dip" />
-    
-    <LinearLayout android:orientation="vertical"
+     <ImageView android:id="@+id/imgIcon"
         android:layout_width="wrap_content"
-        android:layout_weight="1"
         android:layout_height="fill_parent"
-        android:layout_toRightOf="@+id/picLine">
+        android:gravity="center_vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp" />
         
-        <TextView android:id="@+id/textLine"
-            android:layout_gravity="center_vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dip"
-            android:text="I always feel cold! How this thing happens to me??"
-            android:textSize="20sp"
-            android:textColor="#ff00ff00" />
-         
-    </LinearLayout>
-</RelativeLayout>
+     <TextView android:id="@+id/txtTitle"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center_vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:textStyle="bold"
+        android:textSize="22dp"
+        android:textColor="#000000"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp" />
+    
+</LinearLayout>
