--- a/res/menu/context_menu.xml
+++ b/res/menu/context_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    
     <item android:id="@+id/facebook" android:title="facebook"></item>
     <item android:id="@+id/twitter" android:title="twitter"></item>
-    
+    <item android:id="@+id/context_favorite" android:title="mark as favorite"></item>
 
 </menu>
