--- a/res/menu/custom_menu.xml
+++ b/res/menu/custom_menu.xml
@@ -1,15 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <item
-        android:id="@+id/menuitem1"
-        android:showAsAction="ifRoom|withText"
-        android:title="haha">
-    </item>
-
     <item 
         android:id="@+id/search" 
         android:actionViewClass="android.widget.SearchView" 
-        android:showAsAction="ifRoom" 
-        android:title="Search"/> 
+        android:showAsAction="ifRoom" android:title="Search" />
+    <item 
+        android:id="@+id/custom_favorite" 
+        android:showAsAction="ifRoom|withText" 
+        android:title="favorite">
+    </item>
+    
+    <item
+        android:id="@+id/position"
+        android:showAsAction="ifRoom|withText"
+        android:title="position"
+        >       
+    </item>
+    
+    
+
+     
 
 </menu>
